--- a/index-css.css
+++ b/index-css.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f9;
+    background-color: #b0b0c0;
     color: #333;
     margin: 0;
     padding: 0;
@@ -15,11 +15,22 @@ h1 {
     text-align: center;
     margin-bottom: 25px;
 }
+
 legend {
     font-weight: bold;
     color: navy;
     padding: 0 10px;
 }
+.container {
+    background-color: white; 
+    padding: 40px;
+    border-radius: 10px; 
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    max-width: 600px; 
+    width: 90%;
+    text-align: center; 
+}
+
 input[type="text"], input[type="email"] ,select {
     width: 100%;
     padding: 10px;
